--- a/README.asciidoc
+++ b/README.asciidoc
@@ -187,11 +187,19 @@ The Web GUI also works on Maemo, iPad and Android devices.
 Upgrade
 ~~~~~~~
 
+.Upgrading to version 1.149
+
 The `command' and `svcdesc' fields are now urlencoded so the `.setup' files need to be converted. Take a backup then do the following, changing the FOLDER variable if necessary.
+
+NOTE: Only run the following commands ONCE when upgrading to 1.149, otherwise your data will be double-urlencoded!
 
 ----
 # Define this function (copy and paste everything)
 urlencode() { arg="$1"; i="0"; while [ "$i" -lt ${#arg} ]; do c=${arg:$i:1}; if [[ "$c" =~ '[0-9a-zA-Z/!:_\.\-]' ]]; then echo -n "$c"; elif [[ "$c" = " " ]]; then echo -n "+"; else echo -n "%"; printf "%X" "'$c'"; fi; i=$((i+1)); done; }
+
+#
+# Only do the next lines once (and once only!)
+#
 
 FOLDER="local"; FILE="servicesets";
 while IFS=, read c1 c2 c3 c4 c5; do echo -n "$c1,$c2,"; urlencode "$c3"; echo -n ","; urlencode "$c4"; echo ",$c5"; done </etc/nagios/objects/${FOLDER}/setup/${FOLDER}_${FILE}.setup >/tmp/${FOLDER}_${FILE}.setup
@@ -206,17 +214,6 @@ sed -i "s/%60/%2C/g" /tmp/${FOLDER}_${FILE}.setup
 
 After the upgrade run `/usr/bin/upgrade_setup_files.sh'. It can be run any
 number of times and will not harm data if it is run unnecessarily.
-
-----
-/usr/bin/printf "%b" "***** Nagios *****\\\\n\\\\nNotification Type: $NOTIF...
-----
-
-But from 1.144 onwards it should be:
-
-----
-/usr/bin/printf "%b" "***** Nagios *****\n\nNotification Type: $NOTIFICATIO...
-----
-
 
 Install
 ~~~~~~~
