--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -1,7 +1,8 @@
 News
 ----
 
-05 Jun 2013 Cloning is back.
+05 Jun 2013 Added ability to 'clone' to a new service name.
+Cloning is back.
 
 04 Jun 2013 The `servicedesc' and `command' fields are now urlencoded.
 Cloning hosts and services is temporarily disabled!
