--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -1,6 +1,8 @@
 News
 ----
 
+06 Jun 2013 Show output from 'Apply Changes'
+
 05 Jun 2013 Added ability to 'clone' to a new service name.
 Cloning is back.
 
