--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.151) UNRELEASED; urgency=low
+
+  * Bug fixes
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Mon, 11 Jun 2013 11:03:00 +0000
+
 nagrestconf (1.150) UNRELEASED; urgency=low
 
   * Bug fixes
